@@ -7,8 +7,6 @@ import jakarta.persistence.LockModeType;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.UriBuilder;
-import jakarta.xml.bind.DatatypeConverter;
 import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
 import org.jboss.logging.Logger;
 import org.keycloak.authentication.actiontoken.execactions.ExecuteActionsActionToken;
@@ -18,8 +16,8 @@ import org.keycloak.component.ComponentModel;
 import org.keycloak.connections.jpa.JpaConnectionProvider;
 import org.keycloak.models.*;
 import org.keycloak.models.cache.CacheRealmProvider;
+import org.keycloak.models.jpa.entities.ComponentEntity;
 import org.keycloak.models.jpa.entities.UserEntity;
-import org.keycloak.models.utils.KeycloakModelUtils;
 import org.keycloak.protocol.oidc.OIDCLoginProtocol;
 import org.keycloak.services.ErrorPage;
 import org.keycloak.services.ErrorResponse;
@@ -32,13 +30,15 @@ import org.midgard.models.UserContext.UserContext;
 import org.tidecloak.base.iga.ChangeSetProcessors.ChangeSetProcessor;
 import org.tidecloak.base.iga.ChangeSetProcessors.ChangeSetProcessorFactory;
 import org.tidecloak.base.iga.ChangeSetProcessors.ChangeSetProcessorFactoryProvider;
+import org.tidecloak.base.iga.ChangeSetProcessors.processors.RealmLicenseProcessor;
 import org.tidecloak.base.iga.interfaces.ChangesetRequestAdapter;
 import org.tidecloak.base.iga.interfaces.models.RequestType;
 import org.tidecloak.base.iga.interfaces.models.RequestedChanges;
 import org.tidecloak.base.iga.utils.BasicIGAUtils;
+import org.tidecloak.jpa.entities.AuthorizerEntity;
+import org.tidecloak.jpa.entities.Licensing.LicenseHistoryEntity;
 import org.tidecloak.jpa.entities.LicensingDraftEntity;
 import org.tidecloak.jpa.entities.UserClientAccessProofEntity;
-import org.tidecloak.jpa.entities.drafting.TideRoleDraftEntity;
 import org.tidecloak.shared.enums.ActionType;
 import org.tidecloak.shared.enums.ChangeSetType;
 import org.tidecloak.shared.enums.DraftStatus;
@@ -48,9 +48,8 @@ import org.tidecloak.shared.enums.models.WorkflowParams;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static org.keycloak.models.credential.dto.PasswordSecretData.logger;
 
 public class TideAdminRealmResource {
 
@@ -61,8 +60,8 @@ public class TideAdminRealmResource {
     protected static final String tideVendorKeyId = "tide-vendor-key";
     private final ChangeSetProcessor<LicensingDraftEntity> processor;
 
-
     protected static final Logger logger = Logger.getLogger(TideAdminRealmResource.class);
+
     public TideAdminRealmResource(KeycloakSession session, RealmModel realm, AdminPermissionEvaluator auth) {
         this.session = session;
         this.realm = realm;
@@ -71,17 +70,25 @@ public class TideAdminRealmResource {
         this.processor = factory.getProcessor(ChangeSetType.REALM_LICENSING);
     }
 
+    // -----------------------------
+    // REQUESTS (unchanged behavior)
+    // -----------------------------
+
     @GET
     @Path("change-set/licensing/requests")
     public Response getRequestedChangesForUsers() {
         auth.realm().requireManageRealm();
-        if(!BasicIGAUtils.isIGAEnabled(realm)){
+        if (!BasicIGAUtils.isIGAEnabled(realm)) {
             return Response.ok().entity(new ArrayList<>()).build();
         }
         EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
         List<RequestedChanges> changes = new ArrayList<>(processLicensingRequests(em, realm));
         return Response.ok(changes).build();
     }
+
+    // ----------------------------------------
+    // TRIGGER LICENSING (kept as you provided)
+    // ----------------------------------------
 
     @POST
     @Path("trigger-license-signing")
@@ -91,16 +98,20 @@ public class TideAdminRealmResource {
             auth.realm().requireManageRealm();
             final String realmId = realm.getId();
 
-            // 1) Only proceed if license is active (truthy). Anything else blocks.
-            boolean licenseActive = false;
-            try {
-                // Use whatever “active” signal you already expose. This one returns a boolean.
-                licenseActive = IsPendingLicenseActive(realm);
-            } catch (Exception e) {
-                // Treat errors as “not active”
-                licenseActive = false;
+            ComponentModel componentModel = findVendorComponent(realm);
+            if (componentModel == null) {
+                logger.warn("There is no tide-vendor-key component set up for this realm, " + realm.getName());
+                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST,
+                        "There is no tide-vendor-key component set up for this realm, " + realm.getName());
             }
 
+            // 1) Only proceed if license is active (truthy). Anything else blocks.
+            boolean licenseActive;
+            try {
+                licenseActive = IsPendingLicenseActive(realm);
+            } catch (Exception e) {
+                licenseActive = false;
+            }
             if (!licenseActive) {
                 return buildResponse(
                         409,
@@ -118,19 +129,30 @@ public class TideAdminRealmResource {
             if (!drafts.isEmpty()) {
                 return buildResponse(200, "Licensing already triggered, awaiting review.");
             }
+
+            // IGA and authorizer gating
             String igaAttribute = realm.getAttribute("isIGAEnabled");
             boolean isIGAEnabled = igaAttribute != null && igaAttribute.equalsIgnoreCase("true");
+            List<AuthorizerEntity> realmAuthorizers = em.createNamedQuery(
+                            "getAuthorizerByProviderIdAndTypes", AuthorizerEntity.class)
+                    .setParameter("ID", componentModel.getId())
+                    .setParameter("types", List.of("firstAdmin", "multiAdmin"))
+                    .getResultList();
 
-            // Just sign with VRK
-            if(!isIGAEnabled){
+            if (realmAuthorizers.isEmpty()) {
+                throw new Exception("Authorizer not found for this realm.");
+            }
+
+            // Just sign with VRK if no IGA or still first-admin single approver
+            if (!isIGAEnabled ||
+                    (realmAuthorizers.get(0).getType().equalsIgnoreCase("firstAdmin") && realmAuthorizers.size() == 1)) {
                 try {
                     RotateVrk(realmId, session, gvrk);
                     return buildResponse(200, "Licensing has been rotated.");
-                }catch (Exception e) {
+                } catch (Exception e) {
                     logger.error("Error rotating license", e);
                     return buildResponse(500, "Error rotating license: " + e.getMessage());
                 }
-
             }
 
             // 3) Create draft
@@ -149,7 +171,17 @@ public class TideAdminRealmResource {
                     ActionType.CREATE,
                     ChangeSetType.REALM_LICENSING
             );
-            processor.executeWorkflow(session, draft, em, WorkflowType.REQUEST, params, null);
+
+            Runnable callback = () -> {
+                try {
+                    if(processor instanceof RealmLicenseProcessor realmLicenseProcessor){
+                        realmLicenseProcessor.saveDraftReq(draft, em, realm, gvrk);
+                    }
+                } catch (Exception e) {
+                    throw new RuntimeException("Error during FULL_SCOPE callback", e);
+                }
+            };
+            processor.executeWorkflow(session, draft, em, WorkflowType.REQUEST, params, callback);
 
             return buildResponse(200, "Licensing Change Request created and awaiting quorum approval.");
 
@@ -159,22 +191,70 @@ public class TideAdminRealmResource {
         }
     }
 
+    // ---------------------------------------
+    // HISTORY: filter out the CURRENT active
+    // ---------------------------------------
+    /**
+     * Load LICENSE_HISTORY for this realm's vendor component, but DO NOT return the
+     * currently active gVRK entry. The row remains in the DB (append-only), it is
+     * simply hidden from the returned list to avoid UI confusion.
+     *
+     * Use this helper wherever you currently collect history for the UI.
+     */
+    private static List<LicenseHistoryEntity> getLicenseHistoryExcludingActive(KeycloakSession session, RealmModel realm) {
+        ComponentModel cm = findVendorComponent(realm);
+        if (cm == null) {
+            return List.of();
+        }
+        MultivaluedHashMap<String, String> cfg = cm.getConfig();
+        String activeGvrk = cfg.getFirst("gVRK");
+        String active = (activeGvrk == null) ? "" : activeGvrk.trim().toUpperCase();
+
+        EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
+
+        ComponentEntity componentEntity = em.find(ComponentEntity.class, cm.getId());
+
+        List<LicenseHistoryEntity> all = em.createNamedQuery("getLicenseHistoryForKey", LicenseHistoryEntity.class)
+                .setParameter("componentEntity", componentEntity)
+                .getResultList();
+
+        if (active.isEmpty()) {
+            return all;
+        }
+
+        return all.stream()
+                .filter(h -> {
+                    String g = (h.getGVRK() == null) ? "" : h.getGVRK().trim().toUpperCase();
+                    return !g.equals(active);
+                })
+                .collect(Collectors.toList());
+    }
+
+    // ------------------------------------------------
+    // EXISTING endpoints below (unchanged or as-is)
+    // ------------------------------------------------
+
     @POST
     @Path("add-authorization")
     @Produces(MediaType.TEXT_PLAIN)
-    public Response AddAuthorization(@FormParam("changeSetId") String changeSetId, @FormParam("actionType") String actionType, @FormParam("changeSetType") String changeSetType, @FormParam("authorizerApproval") String authorizerApproval, @FormParam("authorizerAuthentication") String authorizerAuthentication ) throws Exception {
+    public Response AddAuthorization(@FormParam("changeSetId") String changeSetId,
+                                     @FormParam("actionType") String actionType,
+                                     @FormParam("changeSetType") String changeSetType,
+                                     @FormParam("authorizerApproval") String authorizerApproval,
+                                     @FormParam("authorizerAuthentication") String authorizerAuthentication) {
         try {
-            RoleModel role = session.getContext().getRealm().getClientByClientId(Constants.REALM_MANAGEMENT_CLIENT_ID).getRole(tideRealmAdminRole);
+            RoleModel role = session.getContext().getRealm()
+                    .getClientByClientId(Constants.REALM_MANAGEMENT_CLIENT_ID)
+                    .getRole(tideRealmAdminRole);
             auth.adminAuth().getUser().hasRole(role);
 
-            ComponentModel componentModel = session.getContext().getRealm().getComponentsStream()
-                    .filter(x -> tideVendorKeyId.equals(x.getProviderId()))  // Use .equals for string comparison
-                    .findFirst()
-                    .orElse(null);
-
-            if(componentModel == null) {
-                logger.warn("There is no tide-vendor-key component set up for this realm, " + session.getContext().getRealm());
-                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST, "There is no tide-vendor-key component set up for this realm, " + session.getContext().getRealm());
+            ComponentModel componentModel = findVendorComponent(session.getContext().getRealm());
+            if (componentModel == null) {
+                logger.warn("There is no tide-vendor-key component set up for this realm, "
+                        + session.getContext().getRealm());
+                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST,
+                        "There is no tide-vendor-key component set up for this realm, "
+                                + session.getContext().getRealm());
             }
             MultivaluedHashMap<String, String> tideVendorKeyConfig = componentModel.getConfig();
             ObjectMapper objectMapper = new ObjectMapper();
@@ -185,70 +265,75 @@ public class TideAdminRealmResource {
 
             VendorData vendorData = Midgard.DecryptVendorData(authorizerAuthentication, vrk);
 
-            ChangesetRequestAdapter.saveAdminAuthorizaton(session, changeSetType, changeSetId, actionType, auth.adminAuth().getUser(), vendorData.AuthToken, vendorData.blindSig, authorizerApproval);
+            ChangesetRequestAdapter.saveAdminAuthorizaton(session, changeSetType, changeSetId, actionType,
+                    auth.adminAuth().getUser(), vendorData.AuthToken, vendorData.blindSig, authorizerApproval);
 
-            return buildResponse(200, "Successfully added admin authorization to changeSetRequest with id " + changeSetId);
+            return buildResponse(200,
+                    "Successfully added admin authorization to changeSetRequest with id " + changeSetId);
 
         } catch (Exception e) {
-            logger.error("Error adding authorization to change set request with ID: " + changeSetId +"." + Arrays.toString(e.getStackTrace()));
-            return  buildResponse(500, "Error adding authorization to change set request with ID: " + changeSetId +" ." + e.getMessage());
+            logger.error("Error adding authorization to change set request with ID: " + changeSetId, e);
+            return buildResponse(500,
+                    "Error adding authorization to change set request with ID: " + changeSetId + " ." + e.getMessage());
         }
     }
 
     @POST
     @Path("add-rejection")
     @Produces(MediaType.TEXT_PLAIN)
-    public Response AddRejection(@FormParam("changeSetId") String changeSetId, @FormParam("actionType") String actionType, @FormParam("changeSetType") String changeSetType) throws Exception {
+    public Response AddRejection(@FormParam("changeSetId") String changeSetId,
+                                 @FormParam("actionType") String actionType,
+                                 @FormParam("changeSetType") String changeSetType) {
         try {
-            RoleModel role = session.getContext().getRealm().getClientByClientId(Constants.REALM_MANAGEMENT_CLIENT_ID).getRole(tideRealmAdminRole);
+            RoleModel role = session.getContext().getRealm()
+                    .getClientByClientId(Constants.REALM_MANAGEMENT_CLIENT_ID)
+                    .getRole(tideRealmAdminRole);
             auth.adminAuth().getUser().hasRole(role);
 
-            ComponentModel componentModel = session.getContext().getRealm().getComponentsStream()
-                    .filter(x -> tideVendorKeyId.equals(x.getProviderId()))  // Use .equals for string comparison
-                    .findFirst()
-                    .orElse(null);
-
-            if(componentModel == null) {
-                logger.warn("There is no tide-vendor-key component set up for this realm, " + session.getContext().getRealm());
-                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST, "There is no tide-vendor-key component set up for this realm, " + session.getContext().getRealm());
+            ComponentModel componentModel = findVendorComponent(session.getContext().getRealm());
+            if (componentModel == null) {
+                logger.warn("There is no tide-vendor-key component set up for this realm, "
+                        + session.getContext().getRealm());
+                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST,
+                        "There is no tide-vendor-key component set up for this realm, "
+                                + session.getContext().getRealm());
             }
-            ChangesetRequestAdapter.saveAdminRejection(session, changeSetType, changeSetId, actionType, auth.adminAuth().getUser());
+            ChangesetRequestAdapter.saveAdminRejection(session, changeSetType, changeSetId, actionType,
+                    auth.adminAuth().getUser());
 
-            return buildResponse(200, "Successfully added admin rejection to changeSetRequest with id " + changeSetId);
+            return buildResponse(200,
+                    "Successfully added admin rejection to changeSetRequest with id " + changeSetId);
 
         } catch (Exception e) {
-            logger.error("Error adding rejection to change set request with ID: " + changeSetId +"." + Arrays.toString(e.getStackTrace()));
-            return  buildResponse(500, "Error adding rejection to change set request with ID: " + changeSetId +" ." + e.getMessage());
+            logger.error("Error adding rejection to change set request with ID: " + changeSetId, e);
+            return buildResponse(500,
+                    "Error adding rejection to change set request with ID: " + changeSetId + " ." + e.getMessage());
         }
     }
-
 
     @POST
     @Path("new-voucher")
     @Produces(MediaType.TEXT_PLAIN)
-    public Response GetAdminVouchers(@FormParam("voucherRequest") String voucherRequest){
-        try{
+    public Response GetAdminVouchers(@FormParam("voucherRequest") String voucherRequest) {
+        try {
             auth.realm().requireManageRealm();
-            // Now that we know this is an admin - we provided whatever voucher they want
             return Response.status(200)
                     .header("Access-Control-Allow-Origin", "*")
                     .entity(getVouchers(voucherRequest))
                     .type(MediaType.TEXT_PLAIN)
                     .build();
 
-        }catch(Exception ex){
-            ex.printStackTrace();
-            return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity("File upload failed: " + ex.getMessage()).type(MediaType.TEXT_PLAIN).build();
+        } catch (Exception ex) {
+            logger.error("File upload failed", ex);
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+                    .entity("File upload failed: " + ex.getMessage())
+                    .type(MediaType.TEXT_PLAIN)
+                    .build();
         }
     }
-    private String getVouchers(
-            String voucherRequest
-    ) throws JsonProcessingException {
-        ComponentModel componentModel = session.getContext().getRealm().getComponentsStream()
-                .filter(x -> "tide-vendor-key".equals(x.getProviderId()))  // Use .equals for string comparison
-                .findFirst()
-                .orElse(null);
 
+    private String getVouchers(String voucherRequest) throws JsonProcessingException {
+        ComponentModel componentModel = findVendorComponent(session.getContext().getRealm());
         MultivaluedHashMap<String, String> config = componentModel.getConfig();
 
         String currentSecretKeys = config.getFirst("clientSecret");
@@ -256,43 +341,43 @@ public class TideAdminRealmResource {
         SecretKeys secretKeys = objectMapper.readValue(currentSecretKeys, SecretKeys.class);
         String vvkId = config.getFirst("vvkId");
 
-
         String payerPublicKey = config.getFirst("payerPublic");
+        String vrk = (vvkId == null || vvkId.isEmpty()) ? secretKeys.pendingVrk : secretKeys.activeVrk;
 
-        // Always use the active vrk unless this is the initial license. The initial license does not yet have an active VRK and is waiting on the pending vrk to be commited
-        String vrk = vvkId == null || vvkId.isEmpty() ? secretKeys.pendingVrk : secretKeys.activeVrk;
-        String response = Midgard.GetVouchers(
+        return Midgard.GetVouchers(
                 voucherRequest,
                 config.getFirst("obfGVVK"),
                 payerPublicKey,
-                vrk);
-
-        return response;
+                vrk
+        );
     }
 
     @GET
     @Path("get-init-cert")
     @Produces(MediaType.TEXT_PLAIN)
     public Response GetInitCert(@QueryParam("roleId") String roleId) throws Exception {
-        try{
+        try {
             EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
             ObjectMapper objectMapper = new ObjectMapper();
-            List<TideRoleDraftEntity> tideRoleDraftEntity = em.createNamedQuery("getRoleDraftByRoleId", TideRoleDraftEntity.class)
-                    .setParameter("roleId", roleId).getResultList();
+            List<org.tidecloak.jpa.entities.drafting.TideRoleDraftEntity> tideRoleDraftEntity =
+                    em.createNamedQuery("getRoleDraftByRoleId",
+                                    org.tidecloak.jpa.entities.drafting.TideRoleDraftEntity.class)
+                            .setParameter("roleId", roleId).getResultList();
 
-            if(tideRoleDraftEntity.isEmpty()){
+            if (tideRoleDraftEntity.isEmpty()) {
                 throw new Exception("Invalid request, no role draft entity found for this role ID: " + roleId);
             }
 
-            InitializerCertifcate initializerCertifcate = InitializerCertifcate.FromString(tideRoleDraftEntity.get(0).getInitCert());
+            InitializerCertifcate initializerCertifcate =
+                    InitializerCertifcate.FromString(tideRoleDraftEntity.get(0).getInitCert());
 
             Map<String, String> response = new HashMap<>();
             response.put("cert", Base64.getUrlEncoder().encodeToString(initializerCertifcate.Encode()));
             response.put("sig", tideRoleDraftEntity.get(0).getInitCertSig());
 
             return buildResponse(200, objectMapper.writeValueAsString(response));
-        }catch(Exception e) {
-            logger.error("Error getting init cert: ", e);
+        } catch (Exception e) {
+            logger.error("Error getting init cert", e);
             throw e;
         }
     }
@@ -302,13 +387,10 @@ public class TideAdminRealmResource {
     public Response CreateApprovalUri() throws URISyntaxException, JsonProcessingException {
         IdentityProviderModel tideIdp = session.identityProviders().getByAlias("tide");
 
-        ComponentModel componentModel = realm.getComponentsStream()
-                .filter(x -> "tide-vendor-key".equals(x.getProviderId()))  // Use .equals for string comparison
-                .findFirst()
-                .orElse(null);
-
-        if(componentModel == null) {
-            return buildResponse(400, "There is no tide-vendor-key component set up for this realm, " + realm.getName());
+        ComponentModel componentModel = findVendorComponent(realm);
+        if (componentModel == null) {
+            return buildResponse(400,
+                    "There is no tide-vendor-key component set up for this realm, " + realm.getName());
         }
 
         MultivaluedHashMap<String, String> config = componentModel.getConfig();
@@ -322,11 +404,11 @@ public class TideAdminRealmResource {
         UserSessionModel userSession = session.sessions().getUserSession(realm, auth.adminAuth().getToken().getSessionId());
         String port = redirectURI.getPort() == -1 ? "" : ":" + redirectURI.getPort();
         String voucherURL = redirectURI.getScheme() + "://" + redirectURI.getHost() + port + "/realms/" +
-                session.getContext().getRealm().getName() + "/tidevouchers/fromUserSession?sessionId=" +userSession.getId();
+                session.getContext().getRealm().getName() + "/tidevouchers/fromUserSession?sessionId=" + userSession.getId();
 
         URI uri = Midgard.CreateURL(
                 auth.adminAuth().getToken().getSessionId(),
-                redirectURI.toString(),//userSession.getNote("redirectUri"),
+                redirectURI.toString(),
                 redirectUrlSig,
                 tideIdp.getConfig().get("homeORKurl"),
                 config.getFirst("clientId"),
@@ -338,15 +420,15 @@ public class TideAdminRealmResource {
                 tideIdp.getConfig().get("ImageURL"),
                 "approval",
                 tideIdp.getConfig().get("settingsSig"),
-                voucherURL, //voucherURL,
+                voucherURL,
                 ""
         );
 
         URI customDomainUri = null;
-        if(customAdminUiDomain != null) {
+        if (customAdminUiDomain != null) {
             customDomainUri = Midgard.CreateURL(
                     auth.adminAuth().getToken().getSessionId(),
-                    customAdminUiDomain,//userSession.getNote("redirectUri"),
+                    customAdminUiDomain,
                     tideIdp.getConfig().get("customAdminUIDomainSig"),
                     tideIdp.getConfig().get("homeORKurl"),
                     config.getFirst("clientId"),
@@ -358,7 +440,7 @@ public class TideAdminRealmResource {
                     tideIdp.getConfig().get("ImageURL"),
                     "approval",
                     tideIdp.getConfig().get("settingsSig"),
-                    voucherURL, //voucherURL,
+                    voucherURL,
                     ""
             );
         }
@@ -366,7 +448,7 @@ public class TideAdminRealmResource {
         Map<String, String> response = new HashMap<>();
         response.put("message", "Opening Enclave to request approval.");
         response.put("uri", String.valueOf(uri));
-        if(customAdminUiDomain != null) {
+        if (customAdminUiDomain != null) {
             response.put("customDomainUri", String.valueOf(customDomainUri));
         }
 
@@ -376,19 +458,20 @@ public class TideAdminRealmResource {
     @POST
     @Path("create-authorization")
     @Produces(MediaType.TEXT_PLAIN)
-    public Response CreateAuthorization(@QueryParam("clientId") String clientId, @FormParam("authorizerApproval") String authorizerApproval, @FormParam("authorizerAuthentication") String authorizerAuthentication ) throws Exception {
+    public Response CreateAuthorization(@QueryParam("clientId") String clientId,
+                                        @FormParam("authorizerApproval") String authorizerApproval,
+                                        @FormParam("authorizerAuthentication") String authorizerAuthentication) {
         try {
             EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
             UserModel user = auth.adminAuth().getUser();
 
-            ComponentModel componentModel = session.getContext().getRealm().getComponentsStream()
-                    .filter(x -> tideVendorKeyId.equals(x.getProviderId()))  // Use .equals for string comparison
-                    .findFirst()
-                    .orElse(null);
-
-            if(componentModel == null) {
-                logger.warn("There is no tide-vendor-key component set up for this realm, " + session.getContext().getRealm());
-                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST, "There is no tide-vendor-key component set up for this realm, " + session.getContext().getRealm());
+            ComponentModel componentModel = findVendorComponent(session.getContext().getRealm());
+            if (componentModel == null) {
+                logger.warn("There is no tide-vendor-key component set up for this realm, "
+                        + session.getContext().getRealm());
+                return ErrorPage.error(session, null, Response.Status.BAD_REQUEST,
+                        "There is no tide-vendor-key component set up for this realm, "
+                                + session.getContext().getRealm());
             }
             MultivaluedHashMap<String, String> tideVendorKeyConfig = componentModel.getConfig();
             ObjectMapper objectMapper = new ObjectMapper();
@@ -398,52 +481,34 @@ public class TideAdminRealmResource {
             String vrk = secretKeys.activeVrk;
 
             VendorData vendorData = Midgard.DecryptVendorData(authorizerAuthentication, vrk);
-            ;
-            UserEntity userEntity = em.find(UserEntity.class, user.getId());
-            List<UserClientAccessProofEntity> userClientAccessProofEntity = em.createNamedQuery("getAccessProofByUserAndClientId", UserClientAccessProofEntity.class)
-                    .setParameter("user", userEntity)
-                    .setParameter("clientId", realm.getClientByClientId(clientId).getId()).getResultList();
 
-            if ( userClientAccessProofEntity == null || userClientAccessProofEntity.isEmpty() ){
-                throw new Exception("This user does not have any roles for this client: Client UID: " + clientId + ", User ID: " + userEntity.getId());
+            UserEntity userEntity = em.find(UserEntity.class, user.getId());
+            List<UserClientAccessProofEntity> userClientAccessProofEntity =
+                    em.createNamedQuery("getAccessProofByUserAndClientId", UserClientAccessProofEntity.class)
+                            .setParameter("user", userEntity)
+                            .setParameter("clientId", realm.getClientByClientId(clientId).getId()).getResultList();
+
+            if (userClientAccessProofEntity == null || userClientAccessProofEntity.isEmpty()) {
+                throw new Exception("This user does not have any roles for this client: Client UID: "
+                        + clientId + ", User ID: " + userEntity.getId());
             }
 
             UserContext adminContext = new UserContext(userClientAccessProofEntity.get(0).getAccessProof());
-            AdminAuthorization adminAuthorization = new AdminAuthorization(adminContext.ToString(), userClientAccessProofEntity.get(0).getAccessProofSig(), vendorData.AuthToken, vendorData.blindSig, authorizerApproval);
-
+            AdminAuthorization adminAuthorization = new AdminAuthorization(
+                    adminContext.ToString(),
+                    userClientAccessProofEntity.get(0).getAccessProofSig(),
+                    vendorData.AuthToken,
+                    vendorData.blindSig,
+                    authorizerApproval
+            );
 
             return buildResponse(200, adminAuthorization.ToString());
 
         } catch (Exception e) {
-            logger.error("Error creating authorization" + Arrays.toString(e.getStackTrace()));
-            return  buildResponse(500, "Error creating authorization" + e.getMessage());
+            logger.error("Error creating authorization", e);
+            return buildResponse(500, "Error creating authorization" + e.getMessage());
         }
     }
-
-//    @GET
-//    @Path("get-init-cert")
-//    @Produces(MediaType.TEXT_PLAIN)
-//    public Response GetInitCert(@QueryParam("roleId") String roleId) throws Exception {
-//        try{
-//            EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
-//            ObjectMapper objectMapper = new ObjectMapper();
-//            List<TideRoleDraftEntity> tideRoleDraftEntity = em.createNamedQuery("getRoleDraftByRoleId", TideRoleDraftEntity.class)
-//                    .setParameter("roleId", roleId).getResultList();
-//
-//            if(tideRoleDraftEntity.isEmpty()){
-//                throw new Exception("Invalid request, no role draft entity found for this role ID: " + roleId);
-//            }
-//
-//            Map<String, String> response = new HashMap<>();
-//            response.put("cert", tideRoleDraftEntity.get(0).getInitCert());
-//            response.put("sig", tideRoleDraftEntity.get(0).getInitCertSig());
-//
-//            return buildResponse(200, objectMapper.writeValueAsString(response));
-//        }catch(Exception e) {
-//            logger.error("Error getting init cert: ", e);
-//            throw e;
-//        }
-//    }
 
     @POST
     @Path("get-required-action-link")
@@ -453,26 +518,29 @@ public class TideAdminRealmResource {
             @Parameter(description = "Client id") @QueryParam(OIDCLoginProtocol.CLIENT_ID_PARAM) String clientId,
             @Parameter(description = "Number of seconds after which the generated token expires") @QueryParam("lifespan") Integer lifespan,
             @Parameter(description = "Required actions the user needs to complete") List<String> actions
-    ){
+    ) {
         UserModel user = session.users().getUserById(realm, userId);
         auth.users().requireManage(user);
 
         int expiration = Time.currentTime() + lifespan;
-        ExecuteActionsActionToken token = new ExecuteActionsActionToken(user.getId(), user.getEmail(), expiration, actions, redirectUri, clientId);
+        ExecuteActionsActionToken token =
+                new ExecuteActionsActionToken(user.getId(), user.getEmail(), expiration, actions, redirectUri, clientId);
         try {
-            UriBuilder builder = LoginActionsService.actionTokenProcessor(session.getContext().getUri());
+            var builder = LoginActionsService.actionTokenProcessor(session.getContext().getUri());
             builder.queryParam("key", token.serialize(session, realm, session.getContext().getUri()));
 
             String link = builder.build(realm.getName()).toString();
-
             return buildResponse(200, link);
 
         } catch (Exception e) {
-            throw ErrorResponse.error("Failed to get link tide account URL " + e.getMessage(), Response.Status.INTERNAL_SERVER_ERROR);
+            throw ErrorResponse.error("Failed to get link tide account URL " + e.getMessage(),
+                    Response.Status.INTERNAL_SERVER_ERROR);
         }
-
-
     }
+
+    // ---------------------
+    // Helper / Utilities
+    // ---------------------
 
     private Response buildResponse(int status, String message) {
         return Response.status(status)
@@ -480,24 +548,18 @@ public class TideAdminRealmResource {
                 .type(MediaType.TEXT_PLAIN)
                 .build();
     }
-    
+
     public static class SecretKeys {
         public String activeVrk;
         public String pendingVrk;
         public String VZK;
         public List<String> history = new ArrayList<>();
-
-        // Method to add a new entry to the history
-        public void addToHistory(String newEntry) {
-            history.add(newEntry);
-        }
+        public void addToHistory(String newEntry) { history.add(newEntry); }
     }
 
     private static List<RequestedChanges> processLicensingRequests(EntityManager em, RealmModel realm) {
-        // Get all pending changes, records that do not have an active delete status or active draft status
         List<LicensingDraftEntity> drafts = em
-                .createNamedQuery("LicensingDraft.findByRealmAndStatusNotEqual",
-                        LicensingDraftEntity.class)
+                .createNamedQuery("LicensingDraft.findByRealmAndStatusNotEqual", LicensingDraftEntity.class)
                 .setParameter("realmId", realm.getId())
                 .setParameter("status", DraftStatus.ACTIVE)
                 .getResultList();
@@ -507,18 +569,19 @@ public class TideAdminRealmResource {
 
     public static List<RequestedChanges> processLicensingRequests(EntityManager em, RealmModel realm, List<LicensingDraftEntity> entities) {
         List<RequestedChanges> changes = new ArrayList<>();
-
         for (LicensingDraftEntity e : entities) {
-            em.lock(e, LockModeType.PESSIMISTIC_WRITE); // Lock the entity to prevent concurrent modifications
-
+            em.lock(e, LockModeType.PESSIMISTIC_WRITE);
             String actionDescription = "Tide offboarding has been requested";
-            RequestedChanges requestChange = new RequestedChanges(actionDescription, ChangeSetType.REALM_LICENSING, RequestType.SETTINGS, null, realm.getId(), ActionType.CREATE, e.getChangeRequestId(), List.of(), e.getDraftStatus(), DraftStatus.NULL);
+            RequestedChanges requestChange = new RequestedChanges(
+                    actionDescription, ChangeSetType.REALM_LICENSING, RequestType.SETTINGS,
+                    null, realm.getId(), ActionType.CREATE, e.getChangeRequestId(),
+                    List.of(), e.getDraftStatus(), DraftStatus.NULL);
             changes.add(requestChange);
         }
         return changes;
     }
 
-    private static SignRequestSettingsMidgard ConstructSignSettings(MultivaluedHashMap<String, String> keyProviderConfig, String vrk){
+    private static SignRequestSettingsMidgard ConstructSignSettings(MultivaluedHashMap<String, String> keyProviderConfig, String vrk) {
         int threshold = Integer.parseInt(System.getenv("THRESHOLD_T"));
         int max = Integer.parseInt(System.getenv("THRESHOLD_N"));
 
@@ -533,17 +596,11 @@ public class TideAdminRealmResource {
 
         return settings;
     }
+
     private static boolean IsPendingLicenseActive(RealmModel realm) throws Exception {
         try {
-            ComponentModel componentModel;
-            try (Stream<ComponentModel> components = realm.getComponentsStream()) {
-                componentModel = components
-                        .filter(c -> "tide-vendor-key".equals(c.getProviderId()))
-                        .findAny() // findAny can be more efficient than findFirst if ordering doesn't matter
-                        .orElse(null);
-            }
-
-            if(componentModel == null) {
+            ComponentModel componentModel = findVendorComponent(realm);
+            if (componentModel == null) {
                 logger.warn("There is no tide-vendor-key component set up for this realm, " + realm.getName());
                 throw new BadRequestException("There is no tide-vendor-key component set up for this realm, " + realm.getName());
             }
@@ -553,49 +610,53 @@ public class TideAdminRealmResource {
             String payerPublic = config.getFirst("payerPublic");
             String pendingVendorId = config.getFirst("pendingVendorId");
 
-            return  Midgard.IsLicenseActive(homeOrkUrl, payerPublic, pendingVendorId);
+            return Midgard.IsLicenseActive(homeOrkUrl, payerPublic, pendingVendorId);
 
         } catch (Exception e) {
-            logger.warn("Could not check if pending license is active", e);// may be committed by JTA which can't
-            e.printStackTrace();
+            logger.warn("Could not check if pending license is active", e);
             throw new Exception("Could not check if pending license is active ");
-
         }
     }
+
     public static void RotateVrk(String realmId, KeycloakSession session, String gVRK) throws JsonProcessingException {
         try {
-            RealmModel realm = session.realms().getRealm(realmId);
-            ComponentModel componentModel;
-            try (Stream<ComponentModel> components = realm.getComponentsStream()) {
-                componentModel = components
-                        .filter(c -> "tide-vendor-key".equals(c.getProviderId()))
-                        .findAny() // findAny can be more efficient than findFirst if ordering doesn't matter
-                        .orElse(null);
+            if (gVRK == null || gVRK.isBlank()) {
+                throw new BadRequestException("Provided gVRK is empty.");
+            }
+            final String gvrk = normalizeHex(gVRK);
+            if (gvrk.isEmpty()) {
+                throw new BadRequestException("Provided gVRK must be an even-length hex string.");
             }
 
-            if(componentModel == null) {
-                logger.warn("There is no tide-vendor-key component set up for this realm, " + realm.getName());
-                throw new BadRequestException("There is no tide-vendor-key component set up for this realm, " + realm.getName());
+            RealmModel realm = session.realms().getRealm(realmId);
+            ComponentModel componentModel = findVendorComponent(realm);
+            if (componentModel == null) {
+                String msg = "There is no tide-vendor-key component set up for this realm, " + realm.getName();
+                logger.warn(msg);
+                throw new BadRequestException(msg);
             }
 
             MultivaluedHashMap<String, String> config = componentModel.getConfig();
             ObjectMapper objectMapper = new ObjectMapper();
             String currentSecretKeys = config.getFirst("clientSecret");
-            SecretKeys secretKeys = objectMapper.readValue(currentSecretKeys, SecretKeys.class);;
+            SecretKeys secretKeys = objectMapper.readValue(currentSecretKeys, SecretKeys.class);
 
+            // Build signing settings using current active VRK
             SignRequestSettingsMidgard settings = ConstructSignSettings(config, secretKeys.activeVrk);
 
-            ModelRequest req = ModelRequest.New("RotateVRK", "1", "VRK:1", DatatypeConverter.parseHexBinary(gVRK));
-
+            // Sign the PROVIDED gVRK (hex)
+            ModelRequest req = ModelRequest.New("RotateVRK", "1", "VRK:1",
+                    jakarta.xml.bind.DatatypeConverter.parseHexBinary(gvrk));
             req.SetAuthorization(Midgard.SignWithVrk(req.GetDataToAuthorize(), settings.VendorRotatingPrivateKey));
-            req.SetAuthorizer(DatatypeConverter.parseHexBinary(config.getFirst("gVRK")));
-            req.SetAuthorizerCertificate(Base64.getDecoder().decode(config.getFirst("gVRKCertificate")));
+            req.SetAuthorizer(jakarta.xml.bind.DatatypeConverter.parseHexBinary(config.getFirst("gVRK")));
+            req.SetAuthorizerCertificate(java.util.Base64.getDecoder().decode(config.getFirst("gVRKCertificate")));
 
             SignatureResponse response = Midgard.SignModel(settings, req);
 
-
-            // Add pending GVRK signature to configuration. The pending configuartion is now signed/authorized and is awaiting SWITCH on current license expiry.
+            // Persist BOTH pending values (so pending→active switch works)
+            config.putSingle("pendingGVRK", gvrk);
             config.putSingle("pendingGVRKCertificate", response.Signatures[0]);
+            // Optionally: config.putSingle("pendingVendorId", config.getFirst("vendorId"));
 
             componentModel.setConfig(config);
             realm.updateComponent(componentModel);
@@ -603,12 +664,47 @@ public class TideAdminRealmResource {
             CacheRealmProvider cacheRealmProvider = session.getProvider(CacheRealmProvider.class);
             cacheRealmProvider.clear();
 
-            logger.info("Successfully rotated VRK, configuration pending switch on current license expiry");
+            logger.infof("Successfully rotated VRK for realm=%s; pendingGVRK set and certificate stored.", realm.getName());
 
-        } catch(Exception e){
-            logger.warn("Could not generate and save tide network keys", e);// may be committed by JTA which can't
-            e.printStackTrace();
+        } catch (Exception e) {
+            logger.warn("Could not generate and save tide network keys", e);
             throw e;
         }
+    }
+
+    // ------------------
+    // tiny shared utils
+    // ------------------
+
+    private static ComponentModel findVendorComponent(RealmModel realm) {
+        try (Stream<ComponentModel> components = realm.getComponentsStream()) {
+            return components
+                    .filter(c -> tideVendorKeyId.equals(c.getProviderId()))
+                    .findAny()
+                    .orElse(null);
+        }
+    }
+
+    private static String getActiveGvrk(RealmModel realm) {
+        ComponentModel cm = findVendorComponent(realm);
+        if (cm == null) return null;
+        String v = cm.getConfig().getFirst("gVRK");
+        return (v == null || v.isBlank()) ? null : v;
+    }
+
+    /** Uppercased hex or "" if invalid. */
+    private static String normalizeHex(String s) {
+        if (s == null) return "";
+        String t = s.trim();
+        if (t.startsWith("0x") || t.startsWith("0X")) t = t.substring(2);
+        if (t.isEmpty() || (t.length() % 2) != 0) return "";
+        for (int i = 0; i < t.length(); i++) {
+            char c = t.charAt(i);
+            boolean hex = (c >= '0' && c <= '9') ||
+                    (c >= 'a' && c <= 'f') ||
+                    (c >= 'A' && c <= 'F');
+            if (!hex) return "";
+        }
+        return t.toUpperCase();
     }
 }
